src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCoupon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCoupon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QB_Sale_Price__c</fullName>
        <label>QB Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>